[gd_scene load_steps=6 format=3 uid="uid://bmk0tqy5poyia"]

[ext_resource type="Script" path="res://scenes/prefabs/ConnectInterface.gd" id="1_8gf5f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xt4kp"]
bg_color = Color(1, 1, 1, 0.945098)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dorhj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wk7ke"]
bg_color = Color(0.458824, 0.364706, 0.858824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_su11u"]
bg_color = Color(0.458824, 0.364706, 0.858824, 1)

[node name="ConnectInterface" type="CanvasLayer"]
layer = 10
script = ExtResource("1_8gf5f")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -150.0
offset_right = 320.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xt4kp")

[node name="Container" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel/Container"]
material = SubResource("CanvasItemMaterial_dorhj")
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
alignment = 1

[node name="QuestionLabel" type="Label" parent="Panel/Container/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "What's the connection between house and tree?"
autowrap_mode = 3

[node name="ConnectionInput" type="LineEdit" parent="Panel/Container/VBox"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="Panel/Container/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_styles/pressed = SubResource("StyleBoxFlat_wk7ke")
text = "Connect"

[node name="CancelButton" type="Button" parent="Panel/Container/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_styles/pressed = SubResource("StyleBoxFlat_su11u")
text = "Cancel"

[node name="CloseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 39.0
grow_horizontal = 0
text = "x"

[connection signal="pressed" from="Panel/Container/VBox/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="Panel/Container/VBox/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
